SlugPreview spacing fix

--- a/client/src/styles/renku_bootstrap_customization.scss
+++ b/client/src/styles/renku_bootstrap_customization.scss
@@ -1,9 +1,6 @@
 // Functions: should be imported first
 @import "~bootstrap/scss/functions";
 
-// Enable negative margins utility
-$enable-negative-margins: true;
-
 // Font
 @import "./fonts/fonts";
 $font-family-base: "Inter", sans-serif;
